Included call to wrapper to group everything together in a simple file for uploading (rome.ttl).

--- a/Makefile.in
+++ b/Makefile.in
@@ -44,6 +44,7 @@ data.ttl: excelfiles/Vorlage-for-Mapping-DKZ-ESCO_Stand-240216.xlsx ${XLS2RDF}
 ROMETTLFILES=arborescences-du-rome.ttl ref-des-appellations.ttl text-sur-les-fiches-rome.ttl
 
 rome:  excelfiles/RefRomeCsv ${ROMETTLFILES}
+	cat ${ROMETTLFILES} | @RAPPER@ -I "junk" -i turtle -o turtle - > rome.ttl
 
 excelfiles/RefRomeCsv: download/RefRomeCsv.zip
 	mkdir -p excelfiles/RefRomeCsv
