--- a/Makefile.in
+++ b/Makefile.in
@@ -41,7 +41,7 @@ data.ttl: excelfiles/Vorlage-for-Mapping-DKZ-ESCO_Stand-240216.xlsx ${XLS2RDF}
 #	unix_cr_gd_dp_v328_utf8.ttl \
 #	unix_texte_v328_utf8.ttl # labels for B1402, etc.
 
-ROMETTLFILES=arborescences-du-rome.ttl ref-des-appellations.ttl text-sur-les-fiches-rome.ttl
+ROMETTLFILES=arborescences-du-rome.ttl ref-des-appellations.ttl text-sur-les-fiches-rome.ttl correspondance_rome_isco08_decembre13221.ttl
 
 rome:  excelfiles/RefRomeCsv ${ROMETTLFILES}
 	cat ${ROMETTLFILES} | @RAPPER@ -I "junk" -i turtle -o turtle - > rome.ttl
@@ -60,6 +60,8 @@ ref-des-appellations.ttl:  ${ROMEEXCELFILES}/ref-des-appellations.xls ${ROMESCRI
 	@PYTHON3@ ${ROMESCRIPTS}/ref-des-appellations.py ${ROMEEXCELFILES}/ref-des-appellations.xls > ref-des-appellations.ttl
 text-sur-les-fiches-rome.ttl: ${ROMEEXCELFILES}/text-sur-les-fiches-rome.xls ${ROMESCRIPTS}/text-sur-les-fiches-rome.py.in
 	@PYTHON3@ ${ROMESCRIPTS}/text-sur-les-fiches-rome.py ${ROMEEXCELFILES}/text-sur-les-fiches-rome.xls > text-sur-les-fiches-rome.ttl
+correspondance_rome_isco08_decembre13221.ttl: ${ROMEEXCELFILES}/correspondance_rome_isco08_decembre13221.xlsx ${ROMESCRIPTS}/correspondance_rome_isco08_decembre13221.py.in
+	@PYTHON3@ ${ROMESCRIPTS}/correspondance_rome_isco08_decembre13221.py ${ROMEEXCELFILES}/correspondance_rome_isco08_decembre13221.xlsx > correspondance_rome_isco08_decembre13221.ttl
 
 .csv.xls:
 	$(CSV2XLS) -u $< -o $@
